--- a/README
+++ b/README
@@ -36,13 +36,11 @@ and are easy to install.
 
 Required external libraries:
 ---
-BOOST (tested with version 1.46.1):
-http://sourceforge.net/projects/boost/files/boost/1.46.1/
+BOOST (tested with version 1.58.1):
+http://sourceforge.net/projects/boost/files/boost/1.58.0/
 
-Seqan version 1.2 (Note that the most recent version is 1.3 but we
-have not yet updated our code to be compatible with the new version,
-so you'll have to get version 1.2):
-http://www.seqan.de/uploads/media/Seqan_Release_1.2.zip
+Seqan version 1.4
+http://packages.seqan.de/seqan-library/seqan-library-1.4.2.zip
 
 HMMoC-BFloat-Algebra:
 http://pedlefsen.github.com/HMMoC-BFloat-Algebra/
