updates for the modern era

--- a/README
+++ b/README
@@ -4,7 +4,7 @@ this file.  You may use at will, subject to the license (Apache v2.0),
 but *please cite the relevant papers* in your documentation and
 publications associated with uses of this library.  Thank you!
 
-Copyright (C) 2011 by Paul T Edlefsen, Fred Hutchinson Cancer Research
+Copyright (C) 2015 by Paul T Edlefsen, Fred Hutchinson Cancer Research
 Center.
 
 Licensed under the Apache License, Version 2.0 (the "License");
@@ -36,20 +36,19 @@ and are easy to install.
 
 Required external libraries:
 ---
-BOOST (tested with version 1.46.1):
-http://sourceforge.net/projects/boost/files/boost/1.46.1/
-
-Seqan version 1.2 (Note that the most recent version is 1.3 but we
-have not yet updated our code to be compatible with the new version,
-so you'll have to get version 1.2):
-http://www.seqan.de/uploads/media/Seqan_Release_1.2.zip
+BOOST (tested with version 1.59.0)
+Seqan (direct from github)
 
 HMMoC-BFloat-Algebra:
-http://pedlefsen.github.com/HMMoC-BFloat-Algebra/
+https://github.com/pedlefsen/HMMoC-BFloat-Algebra
 
 Required galosh libraries:
 ---
-prolific:  http://galosh.github.com/prolific
+prolific (NOT the same thing as "profillic"):  https://github.com/galosh/prolific
+
+Recommended galosh libraries:
+---
+profillic:  https://github.com/galosh/profillic
 
 See the document INSTALL for more information.
 
@@ -57,4 +56,4 @@ Thank you,
   Paul
 
 Paul T. Edlefsen
-July 9, 2011
+September 3, 2015
