--- a/INSTALL
+++ b/INSTALL
@@ -31,13 +31,17 @@ profillic:  https://github.com/galosh/profillic
 # rm -r /usr/local/include/boost/
 sudo port install boost
 
+## Profillic uses boost-build (bjam)
+sudo port install boost-build
+rehash
+
+## Seqan needs cmake (on a mac, get it using macports [http://www.macports.org/install.php]:)
+sudo port install cmake
+
 ## Using Seqan directly from github (master branch, not devel branch) [https://github.com/seqan/seqan]:
 cd ~/src/from-git
 git clone https://github.com/seqan/seqan.git
 ## Docs at http://docs.seqan.de/seqan/master/
-## Note untested at this point whether we can use this and compile.
-## Need cmake (on a mac, get it using macports [http://www.macports.org/install.php]:)
-sudo port install cmake
 ## (unsure if you really need to make sure you have the java jde installed and up to date first: http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html)
 ## (make sure boost is installed and findable before running cmake)
 mkdir seqan-build
@@ -52,10 +56,6 @@ cd release
 cmake ~/src/from-git/seqan -DCMAKE_BUILD_TYPE=Release
 make seqan_tcoffee
 cd ..
-
-## Profillic uses boost-build (bjam)
-sudo port install boost-build
-rehash
 
 git clone https://github.com/pedlefsen/HMMoC-BFloat-Algebra.git
 cd HMMoC-BFloat-Algebra
