--- a/README
+++ b/README
@@ -1,23 +1,24 @@
 This is profuse, a suite of programs for working with Profile HMMs.
 Please see the document CITING, which should have been included with
-this file.  You may use at will, subject to the license (Apache v2.0),
+this file.  You may use at will, subject to the license (GPL v2),
 but *please cite the relevant papers* in your documentation and
 publications associated with uses of this library.  Thank you!
 
 Copyright (C) 2015 by Paul T Edlefsen, Fred Hutchinson Cancer Research
 Center.
 
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 2 of the License, or
+    (at your option) any later version.
 
-    http://www.apache.org/licenses/LICENSE-2.0
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
 
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
+    You should have received a copy of the GNU General Public License
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 -----
 PLATFORMS:
@@ -56,4 +57,4 @@ Thank you,
   Paul
 
 Paul T. Edlefsen
-September 3, 2015
+October 23, 2015
